--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -24,7 +24,12 @@ jobs:
       - run: wget https://github.com/AntelopeIO/leap/releases/download/v5.0.3/leap_5.0.3_amd64.deb
       - run: apt install -y ./leap_5.0.3_amd64.deb
       - uses: actions/checkout@v4
-      - run: cdt-cpp -abigen src/${{ vars.SC_NAME }}.cpp -o ${{ vars.SC_NAME }}.wasm -I include/${{ vars.SC_NAME }}
+      - name: Checkout system contracts repo
+        uses: actions/checkout@v4
+        with:
+          repository: AntelopeIO/reference-contracts
+          path: reference-contracts
+      - run: cdt-cpp -abigen src/${{ vars.SC_NAME }}.cpp -o ${{ vars.SC_NAME }}.wasm -I include/${{ vars.SC_NAME }} -I reference-contracts/contracts/eosio.system/include/eosio.system
       - run: cleos wallet create --file wallet.pw >/dev/null
       - run: cleos wallet open
       - run: cat wallet.pw | cleos wallet unlock
