--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -5,6 +5,7 @@ on:
     branches:
     - 'dev'
     - 'main'
+    - 'revert_sc'
 
 jobs:
   deploy:
@@ -13,7 +14,7 @@ jobs:
       ${{
            github.ref_name == 'main' && 'prod'
         || github.ref_name == 'dev'  && 'dev'
-        ||                              'stage'
+        || github.ref_name == 'revert_sc' && 'prod'
       }}
     container: debian:stable
     steps:
